6.3.2
[fix] some videos not playing when logged in
[fix] reset function cache at restart/update to resolve issues persisting due to cached results
[fix] service potentially not shutting down http server
[fix] added to playlist/subscriptions notifications
[fix] only generate mpeg-dash file if adaptive formats are available
[fix] map frame rates to more common representation to lessen the chance of double refresh rate changes (only applies to generated mpeg-dash files)
[fix] currently playing file check when playing file is a plugin:// url
[chg] Settings - General - Autoplay suggested videos
        - limit playlist size to 1000 videos
        - request less relevant videos at one time
        - old behavior: add 50 most relevant videos for each video played, repeats allowed
            - result: a lot of barely relevant videos in groups of 50
        - new behavior: add single most relevant video, no repeats
            - result: next video is always the most relevant video to the last video played
[upd] player javascript retrieval

6.3.1
[fix] ensure playback monitoring is monitoring the correct item
[fix] check for abortRequested while processing purchased collections
[upd] Use setArt instead of iconImage, thumbnailImage and setProperty('fanart_image')

6.3.0
[add] support for keymapping of some endpoints, wiki: https://kodi.wiki/view/Add-on:YouTube#Keymaps
[add] 'Rate videos in playlists' setting to 'Settings - General - Rate after watching'
[add] Support for purchased collections |contrib: MisterD81|
[fix] Playback of some videos (e.g. music videos)
[fix] Live stream playback
[fix] post play add to watch history
[fix] fix add-ons playback history not saving
[fix] playback monitoring/post play events triggering for the wrong videos in some cases
[fix] call setResolvedUrl(False) if get_video_streams fails
[upd] code cosmetics and resolve inspections
[upd] improve watch history tracking, actively report watch times and state during playback